# manga-ocr-docker

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
